; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_sub_16_re_al.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_sub_16_re_al.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DX = common dso_local global i8* null, align 8
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i8* null, align 8
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_sub_16_re_al() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = call i8* (...) @EA_AL_16()
  store i8* %5, i8** %1, align 8
  %6 = load i8*, i8** @DX, align 8
  %7 = call i8* @MASK_OUT_ABOVE_16(i8* %6)
  store i8* %7, i8** %2, align 8
  %8 = load i8*, i8** %1, align 8
  %9 = call i8* @m68ki_read_16(i8* %8)
  store i8* %9, i8** %3, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = load i8*, i8** %2, align 8
  %12 = ptrtoint i8* %10 to i64
  %13 = ptrtoint i8* %11 to i64
  %14 = sub i64 %12, %13
  %15 = inttoptr i64 %14 to i8*
  store i8* %15, i8** %4, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @NFLAG_16(i8* %16)
  store i32 %17, i32* @FLAG_N, align 4
  %18 = load i8*, i8** %4, align 8
  %19 = call i8* @MASK_OUT_ABOVE_16(i8* %18)
  store i8* %19, i8** @FLAG_Z, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @CFLAG_16(i8* %20)
  store i32 %21, i32* @FLAG_C, align 4
  store i32 %21, i32* @FLAG_X, align 4
  %22 = load i8*, i8** %2, align 8
  %23 = load i8*, i8** %3, align 8
  %24 = load i8*, i8** %4, align 8
  %25 = call i32 @VFLAG_SUB_16(i8* %22, i8* %23, i8* %24)
  store i32 %25, i32* @FLAG_V, align 4
  %26 = load i8*, i8** %1, align 8
  %27 = load i8*, i8** @FLAG_Z, align 8
  %28 = call i32 @m68ki_write_16(i8* %26, i8* %27)
  ret void
}

declare dso_local i8* @EA_AL_16(...) #1

declare dso_local i8* @MASK_OUT_ABOVE_16(i8*) #1

declare dso_local i8* @m68ki_read_16(i8*) #1

declare dso_local i32 @NFLAG_16(i8*) #1

declare dso_local i32 @CFLAG_16(i8*) #1

declare dso_local i32 @VFLAG_SUB_16(i8*, i8*, i8*) #1

declare dso_local i32 @m68ki_write_16(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
